--- a/BICSI/res/layout/confschedule_detail_info_list.xml
+++ b/BICSI/res/layout/confschedule_detail_info_list.xml
@@ -1,57 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:padding="6dip" >
 
+    <TextView
+        android:id="@+id/textViewfunctiontitle"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="functiontitle"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textStyle="bold" />
 
-		<TextView
-            android:id="@+id/textViewfunctiontitle"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-             android:textStyle="bold"
-            android:text="functiontitle"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-		
-		<TextView
-            android:id="@+id/textViewfunctiondate"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-             android:textStyle="bold"
-            android:text="functiondate"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-    
-		<TextView
-		    android:id="@+id/textViewfunctionStartTime"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:text="functionStartTime"
-		    android:textAppearance="?android:attr/textAppearanceSmall"
-		    android:textStyle="bold" />
-			
-			<TextView
-			    android:layout_width="25dp"
-			    android:layout_height="wrap_content"
-			    android:text=" - "
-			    android:textAppearance="?android:attr/textAppearanceSmall"
-			    android:textStyle="bold" />
-			
-		<TextView
-		    android:id="@+id/textViewfunctionEndTime"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:text="functionEndTime"
-		    android:textAppearance="?android:attr/textAppearanceSmall"
-		    android:textStyle="bold" />
-		
-		<TextView
-            android:id="@+id/textViewFUNCTIONCD"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-             android:textStyle="bold"
-            android:text="hidden"
-            android:visibility="gone" />
+    <TextView
+        android:id="@+id/textViewFUNCTIONCD"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="hidden"
+        android:textStyle="bold"
+        android:visibility="gone" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/textViewfunctionStartTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textViewfunctiontitle"
+        android:layout_below="@+id/textViewfunctiontitle"
+        android:layout_marginTop="17dp"
+        android:text="functionStartTime"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textViewfunctiondate"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/textViewfunctiontitle"
+        android:text="functiondate"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="25dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textViewfunctionStartTime"
+        android:layout_alignBottom="@+id/textViewfunctionStartTime"
+        android:layout_toRightOf="@+id/textViewfunctionStartTime"
+        android:text=" - "
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textViewfunctionEndTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textView1"
+        android:layout_alignBottom="@+id/textView1"
+        android:layout_toRightOf="@+id/textView1"
+        android:text="functionEndTime"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textStyle="bold" />
+
+</RelativeLayout>
