--- a/BICSI/res/layout/fragment_confschedule_single.xml
+++ b/BICSI/res/layout/fragment_confschedule_single.xml
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/functionstarttime"
+            android:id="@+id/functionstarttimestr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="starttime"
@@ -53,7 +53,7 @@
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <TextView
-            android:id="@+id/functionendtime"
+            android:id="@+id/functionendtimestr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="endtime"
