--- a/BICSI/res/layout/fragment_confschedule_single.xml
+++ b/BICSI/res/layout/fragment_confschedule_single.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content" >
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="10dp"
     android:orientation="vertical" >
+    
+    
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,6 +21,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textSize="25dip"
+            android:textStyle="bold"
+            android:paddingTop="10dip"
+            android:paddingBottom="10dip"
+            android:textColor="#43bd00"
             android:text="title"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -28,6 +40,8 @@
             android:id="@+id/functiondate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingBottom="10dip"
+            android:textStyle="bold"
             android:layout_gravity="center"
             android:text="date" />
 
@@ -41,6 +55,9 @@
             android:id="@+id/functionstarttimestr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingTop="10dip"
+            android:paddingBottom="10dip"
+            android:textStyle="bold"
             android:text="starttime"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -49,6 +66,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:paddingTop="10dip"
+            android:paddingBottom="10dip"
+            android:textStyle="bold"
             android:text=" - "
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -56,6 +76,9 @@
             android:id="@+id/functionendtimestr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingTop="10dip"
+            android:paddingBottom="10dip"
+            android:textStyle="bold"
             android:text="endtime"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -65,14 +88,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
-
+        
         <TextView
             android:id="@+id/functiondecsription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="description" />
-
+	
     </LinearLayout>
 
     <LinearLayout
@@ -83,8 +106,52 @@
             android:id="@+id/functionlocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingTop="10dip"
+            android:paddingBottom="10dip"
+            android:textStyle="bold"
             android:text="location" />
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/speakers_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Speaker(s):"
+             android:textStyle="bold"/>
 </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/trainer1fname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="fname"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/space"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" "
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/trainer1lname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="lname"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+</LinearLayout>
+</ScrollView>
