--- a/BICSI/res/layout/schedule_info.xml
+++ b/BICSI/res/layout/schedule_info.xml
@@ -13,6 +13,7 @@
             android:layout_height="wrap_content"
              android:textStyle="bold"
             android:text="sessionname"
+            android:typeface="sans"
             android:textAppearance="?android:attr/textAppearanceMedium" />
     
 		
@@ -21,6 +22,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="scheduledate"
+            android:layout_marginTop="5dip"
+            android:textColor="#343434"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold" />
 		
@@ -30,8 +33,9 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:paddingTop="10dip"
+            android:paddingTop="5dip"
             android:paddingBottom="10dip"
+            android:textColor="#343434"
             android:text="sessiontime" />
         
 
