--- a/BICSI/res/layout/fragment_ehschedule.xml
+++ b/BICSI/res/layout/fragment_ehschedule.xml
@@ -9,7 +9,10 @@
         
  <EditText android:id="@+id/myFilter" 
   android:layout_width="match_parent"
-  android:layout_height="wrap_content" 
+  android:layout_height="wrap_content"
+  android:text="hidden"
+  android:textStyle="bold"
+  android:visibility="gone" 
   android:ems="10" 
   android:hint="@string/some_hint">
   <requestFocus />
