Implemented surveys per function

--- a/BICSI/res/layout/confschedule_detail_info_list.xml
+++ b/BICSI/res/layout/confschedule_detail_info_list.xml
@@ -9,6 +9,7 @@
         android:id="@+id/textViewfunctiontitle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:textColor="#996633"
         android:text="functiontitle"
         android:typeface="sans"
         android:textAppearance="?android:attr/textAppearanceMedium"
