--- a/BICSI/res/layout/schedule_info.xml
+++ b/BICSI/res/layout/schedule_info.xml
@@ -12,6 +12,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
              android:textStyle="bold"
+             android:textColor="#996633"
             android:text="sessionname"
             android:typeface="sans"
             android:textAppearance="?android:attr/textAppearanceMedium" />
