--- a/BICSI/res/layout/fragment_confschedule_single.xml
+++ b/BICSI/res/layout/fragment_confschedule_single.xml
@@ -83,6 +83,20 @@
             android:text="endtime"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="             "
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <Button
+            android:id="@+id/survey_btn"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="33dp"
+            android:text="Take Survey" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -152,6 +166,33 @@
             android:text="lname"
             android:textStyle="bold" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+        
+        <TextView
+            android:id="@+id/trainer2fname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="fname2"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/space2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" "
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/trainer2lname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="lname2"
+            android:textStyle="bold" />
+        
     </LinearLayout>
 
 </LinearLayout>
